<resources>
    <string name="app_name">My Application</string>
    <string name="button_main_1_3">Simple UI</string>

    <string name="action_bar_main">Main</string>
    <string name="title_activity_simple_ui">SimpleUIActivity</string>
    <string name="title_activity_start_another_activity">Start Another Activity</string>
    <string name="title_activity_empty">Empty View</string>
    <string name="title_activity_orientation_sensitive_layout">Orientation Sensitive Layout</string>
    <string name="title_activity_themes">Different Themes</string>
    <string name="title_activity_lifecycle">Activity Lifecycle</string>
    <string name="title_activity_lifecycle2">Activity Lifecycle2</string>
    <string name="title_activity_fragment">Fragments</string>
    <string name="title_internal_storage">Internal Storage</string>
    <string name="title_sqlite_database">SQLite Database</string>
    <string name="title_another_activity">Another Activity</string>
    <string name="title_app_chooser">App Chooser</string>
    <string name="title_result_activity">Result from Activity</string>
    <string name="title_camera_activity">Camera Activity</string>

    <string name="layout_simple_ui_text">https://developer.android.com/training/basics/firstapp/building-ui.html</string>
    <string name="layout_start_another_activity_text">https://developer.android.com/training/basics/firstapp/starting-activity.html</string>


    <string name="edit_text_hint_1_3">Edit text</string>
    <string name="send">send</string>
    <string name="save">save</string>
    <string name="load">load</string>
    <string name="portrait">portrait</string>
    <string name="landscape">landscape</string>

</resources>
